# advent-of-code-2024

./: .gitignore  Cargo.toml  README.md
src/: common.rs  main.rs
src/days/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  mod.rs
src/types/: direction.rs  field.rs  map.rs  mod.rs  position.rs  v2.rs
