cargo-features = ["edition2024"]

[package]
name = "advent-of-code-2024"
version = "0.1.0"
edition = "2024"

[dependencies]
aoc_driver = "0.3.6"
itertools = { version = "0.14" }
peg = "0.8.4"

[dev-dependencies]
pretty_assertions = "1.4"

[profile.release]
lto = "thin"
strip = true
opt-level = 2
codegen-units = 2

[profile.test]
strip = false
inherits = "release"
